--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   </head>
 
   <body>
-    <header>
-      <a href="/"><img src="img/profilepic.jpg"></a>
-      <p>Cameron Pittman<br><span>Course Developer</span></p>
+    <header style="padding: 0 0.5em; color: #C90B0B;">
+      <a href="/"><img src="img/profilepic.jpg" style="border-radius: 40px; float: left;"></a>
+      <p style="font-size:1.5em; font-weight: bold; padding-left: 4em;">Cameron Pittman<br><span style="font-size: 0.8em; font-weight: normal;">Course Developer</span></p>
     </header>
 
     <div class="container">
@@ -27,7 +27,7 @@
       </div>
 
       <div class="content">
-        <ul>
+        <ul style="margin: 1em 0; padding: 0 0 0 20px;">
           <li>
             <img src="https://lh4.ggpht.com/kJEnfqhPvtm4m3EneSZ4fWYGS8lW4YNhEjk6zPkyrQaBUHc-2Y_ElDic99NHI0h-UBLXVbRCjFybFvrWxdk=s100">
             <a href="project-2048.html">Build Your Own 2048!</a>
