Good using of fonts and info about me

--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <meta name="author" content=" FILL ME IN ">
     <title>Cameron Pittman: Portfolio</title>
 
-    <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
-
     <link href="css/style.css" rel="stylesheet">
     <link @media="print" href="css/print.css" rel="stylesheet">
     <script src="js/perfmatters.js" async></script>
@@ -25,7 +22,13 @@
       <div class="hero">
         <strong>I love web development!</strong> This is a template for a simple portfolio. I decided to use it to showcase a few Udacity courses I've taken and some teaching work, but you can use it to showcase any kind of project that you want the world to see :) <br> Contact me: me@email.com
       </div>
-
+      <div style="padding: 0 0.5em; color: #C90B0B;">
+	    <a href="/"><img src="img/mypic.jpg" style="border-radius: 40px; float: left;"></a>
+	    <p style="font-size:1.5em; font-weight: bold; padding-left: 4em;">Potyagevich Dmitry<br><span style="font-size: 0.8em; font-weight: normal;">Smart and high motivated</span></p>
+      </div>
+      <div class="hero">
+        <strong>Потягевич Дмитрий Михайлович</strong><br> Cell-number: +375 29 118-68-51<br> E-mail: potyagevich.d@mail.ru
+      </div>
       <div class="content">
         <ul style="margin: 1em 0; padding: 0 0 0 20px;">
           <li>
