--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Cameron Pittman: Portfolio</title>
 
     <link href="css/style.css" rel="stylesheet">
-    <link @media="print" href="css/print.css" rel="stylesheet">
+    <link href="css/print.css" rel="stylesheet" media="print">
     <script src="js/perfmatters.js" async></script>
   </head>
 
