--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <script src="js/perfmatters.js" async></script>
   </head>
 
-  <body>
-    <header style="padding: 0 0.5em; color: #C90B0B;">
+  <body style="margin: 0; font-size: 14px; line-height: 1.61; font-weight: 400; font-family: 'Open Sans', sans-serif; color: #333;">
+    <header style="padding: 0 0.5em; color: #C90B0B; max-width: 45em; margin: 0 auto;">
       <a href="/"><img src="img/profilepic.jpg" style="border-radius: 40px; float: left;"></a>
       <p style="font-size:1.5em; font-weight: bold; padding-left: 4em;">Cameron Pittman<br><span style="font-size: 0.8em; font-weight: normal;">Course Developer</span></p>
     </header>
 
-    <div class="container">
+    <div class="container" style="max-width: 45em; margin: 0 auto;">
       <div class="hero">
         <strong>I love web development!</strong> This is a template for a simple portfolio. I decided to use it to showcase a few Udacity courses I've taken and some teaching work, but you can use it to showcase any kind of project that you want the world to see :) <br> Contact me: me@email.com
       </div>
@@ -29,7 +29,7 @@
       <div class="hero">
         <strong>Потягевич Дмитрий Михайлович</strong><br> Cell-number: +375 29 118-68-51<br> E-mail: potyagevich.d@mail.ru
       </div>
-      <div class="content">
+      <div class="content" style="padding: 1em 1em;">
         <ul style="margin: 1em 0; padding: 0 0 0 20px;">
           <li>
             <img src="https://lh4.ggpht.com/kJEnfqhPvtm4m3EneSZ4fWYGS8lW4YNhEjk6zPkyrQaBUHc-2Y_ElDic99NHI0h-UBLXVbRCjFybFvrWxdk=s100">
@@ -57,8 +57,8 @@
         </ul>
     </div>
 
-    <footer>
-      <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
+    <footer style="max-width: 45em; margin: 0 auto; padding: 0 0.5em; border-top: 1px solid #ccc;">
+      <p>&copy; Web Performance 2014 <span id="crp-stats" style="float: right; font-style: italic;"></span></p>
     </footer>
   </body>
 </html>
