--- a/index.html
+++ b/index.html
@@ -6,8 +6,50 @@
     <meta name="description" content=" FILL ME IN ">
     <meta name="author" content=" FILL ME IN ">
     <title>Cameron Pittman: Portfolio</title>
+    <style>
+		@font-face {
+		  font-family: 'Open Sans';
+		  font-style: normal;
+		  font-weight: 400;
+		  src: local('Open Sans'), local('OpenSans'), url(http://fonts.gstatic.com/s/opensans/v13/cJZKeOuBrn4kERxqtaUH3VtXRa8TVwTICgirnJhmVJw.woff2) format('woff2');
+		  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+		}
+		@font-face {
+		  font-family: 'Open Sans';
+		  font-style: normal;
+		  font-weight: 400;
+		  src: local('Open Sans'), local('OpenSans'), url(http://fonts.gstatic.com/s/opensans/v13/RjgO7rYTmqiVp7vzi-Q5URJtnKITppOI_IvcXXDNrsc.woff2) format('woff2');
+		  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+		}
+		html {
+		  font-size: 100%;
+		  overflow-y: scroll;
+		  -webkit-tap-highlight-color: rgba(0,0,0,0);
+		  -ms-text-size-adjust: 100%;
+		  -webkit-text-size-adjust: none;
+		}
 
-    <link href="css/style.css" rel="stylesheet">
+
+		a { color: #12C; }
+		a:visited { color: #61C; }
+		a:focus { outline: thin dotted; }
+		a:hover, a:active { color: #c00; outline: 0; }
+
+		.hero { padding: 2em; background-color: #f8f8f8; font-size:1.2em;
+		  border-bottom: 1px solid #ccc;
+		  border-top: 1px solid #ccc;
+		}
+
+		li { list-style-type: none; font-size: 1.1em;}
+		li img { float:left; padding-right: 1em; }
+		li p { font-size: 0.9em; font-style: italic; }
+
+		/* Smartphones (portrait) */
+		@media only screen and (max-width: 480px) {
+		  body { font-size: 12px;}
+		  header p { padding-left: 4.5em;}
+	}    
+    </style>
     <link href="css/print.css" rel="stylesheet" media="print">
     <script src="js/perfmatters.js" async></script>
   </head>
